# ralph-claude

./: .gitignore  AGENTS.md  Dockerfile  README.md  clouds.yaml  docker-compose.yml  install.sh  prd.json.example  prompt.md  pyproject.toml  ralph-i.sh  ralph-status.sh  ralph.sh  ralph.sh.backup  todo.md  uninstall.sh
agents/: claude.sh  common.sh  opencode.sh
docker/: .env.example  entrypoint.sh
docs/: opencode-integration.md  remote-execution.md
plugins/opencode-ralph-hook/: package-lock.json  package.json
plugins/opencode-ralph-hook/src/: index.ts
ralph-tui/: Cargo.toml
ralph-tui/src/: main.rs  theme.rs  wizard.rs
skills/ralph/: SKILL.md
src/ralph/: cli.py  loop.py
src/ralph_uv/: agent_manager.py  agents.py  attach.py  branch.py  cli.py  daemon.py  daemon_cli.py  daemon_loop.py  daemon_rpc.py  interactive.py  loop.py  opencode_server.py  prompt.py  session.py  workspace.py  ziti.py
tasks/archived/ralph-activity-control/: prd.json  prd.md  progress.txt
tasks/archived/ralph-infrastructure-unification/: prd.json  prd.md  progress.txt
tasks/archived/ralph-tui/: prd.json  prd.md  progress.txt
tasks/opencode-containerization/: prd.json  prd.md  progress.txt
tasks/ralph-activity-control/: prd.json  progress.txt
tasks/ralph-infrastructure-unification/: prd.json  progress.txt
tasks/ralph-tui/: prd.json  progress.txt
tasks/ralph-tui-iteration-progress/: prd.md
tasks/remote-daemon/: prd.json  prd.md  progress.txt
tasks/remote-execution/: prd.json  prd.md  progress.txt
tasks/remote-loop-execution/: prd.json  prd.md  progress-1.txt  progress.txt  remote-bootstrapping.md
tasks/test-agent-loop/: prd.json  progress.txt  test2.txt
