[project]
name = "ralph-uv"
version = "0.1.0"
description = "Autonomous AI agent loop runner"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "libtmux>=0.37",
]

[project.scripts]
ralph-uv = "ralph_uv.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_uv"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["ralph_uv"]
mypy_path = "src"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
