[package]
name = "ralph-tui"
version = "0.1.0"
edition = "2024"
description = "Interactive terminal interface for Ralph autonomous coding agent"
authors = ["Ralph Project Contributors"]
license = "MIT"
repository = "https://github.com/apino/ralph-claude"
keywords = ["tui", "terminal", "claude", "ai", "agent"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vt100 = "0.16"
